@@ -1,0 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Basic test page</title>
+</head>
+<body>
+Hello world !
+</body>
+</html>
