@@ -12,6 +12,10 @@
 * Remove ``_headers`` property to browser object, the headers manipulation functions now impact directly the
 ``Browser.session.headers`` dict
 * Since ``headers`` keyword argument isn't called anymore, you can add specific headers for a single request
+* Add a better history support. The history is now an object and has a previous and a next function, see the docs for
+all informations
+* Improve tests for new history
+* Updated docuementation for history
 
 Backward compatibility breaks :
 
